# ChickenDodge

./: README.md
Ex1-3/: .gitignore  CMakeLists.txt  README.md
Ex1-3/include/quadtree/: Box.h  Vector2.h
Ex1-3/include/simplege/: math.h
Ex1-3/src/components/: sprite.cpp
Ex4/: CMakeLists.txt  README.md
Ex4+/include/simplege/: simplege.h
Ex4+/src/: localisation.cpp
Ex4+/src/components/: debugdrawcalls.cpp
Ex4/src/components/: camera.cpp  layer.cpp  sprite.cpp
Ex4/src/graphics/: buffer.cpp
Ex5/: CMakeLists.txt  README.md
Ex5-6/: CMakeLists.txt  README.md
Ex5-6/examples/chickendodge/: CMakeLists.txt
Ex5-6/include/simplege/: game.h  network.h  simplege.h
Ex5-6/src/: network.cpp
Ex5-6/src/components/: debugdrawcalls.cpp  keyboardinput.cpp  networkinput.cpp
Ex5-6/src/systems/: audiosystem.cpp  firstprocessguard.h
Ex5/examples/chickendodge/: CMakeLists.txt
Ex5/examples/chickendodge/include/chickendodge/: messages.h
Ex5/examples/chickendodge/include/chickendodge/components/: countdown.h  networkleaderboard.h
Ex5/examples/chickendodge/include/chickendodge/messages/: networkleaderchanged.h  networkscore.h  networkstart.h
Ex5/examples/chickendodge/server/: networkplayerserver.cpp  networkplayerserver.h
Ex5/examples/chickendodge/src/: game.cpp
Ex5/examples/chickendodge/src/components/: chickenspawner.cpp  countdown.cpp  networkleaderboard.cpp  networkplayermanager.cpp  player.cpp  score.cpp  timer.cpp
Ex5/src/: game.cpp  localisation.cpp
include/quadtree/: Quadtree.h
src/components/: collider.cpp  layer.cpp  rawsprite.cpp  sprite.cpp
(+43 files in other folders)
